made a UI to check every Buyers stats intergrated into the main UI